# recipe-formatter

./: .gitignore  Makefile  README.md  SCRATCH  justfile  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
examples/: README.md  example.cast  make-examples.sh
prompts/: finalize.txt  group.txt  ingredients.txt  instructions.txt  json.txt  revise.txt  scale.txt  tips.txt  title_description_notes.txt
src/recipe_formatter/: main.py
src/recipe_formatter/handlers/: __init__.py  llama_cpp_handler.py  llama_handler.py  openai_handler.py
